[package]
name = "tflap"
version = "0.1.1"
edition = "2021"
description = "A classic Flappy Bird game in your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Justhiro55/tflap"
readme = "README.md"
keywords = ["game", "flappy-bird", "terminal", "cli", "retro"]
categories = ["command-line-utilities", "games"]

[dependencies]
crossterm = "0.28"
rand = "0.8"
